--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ body{
     padding: 20px;
     border-radius: 5px;
     gap: 10px;
-    scale: 1.5;
+    scale: 1.3;
     box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.126);
+
+    width: 30%;
 }
 
 .todoContainer > p {
@@ -54,7 +56,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    height: 150px;
+    height: 380px;
     overflow-y: scroll;
     box-shadow: inset 0px -6px 7px -8px rgba(0, 0, 0, 0.61);
     border-radius: 5px;
@@ -84,10 +86,16 @@ body{
     padding: 5px 10px;
     border-radius: 4px;
     border: 1px solid white;
+
+    background-color: rgba(4, 179, 126, 0.342);
+}
+
+#selectTodo {
+    accent-color: rgb(4, 179, 126)
 }
 
 .doneItem p {
-    
+    text-decoration: line-through;
 }
 
 #todoOpts{
