--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,7 @@ body{
     padding: 5px 10px;
     border-radius: 4px;
     border: 1px solid white;
+    cursor: grab;
 }
 
 .doneItem{
@@ -96,12 +97,14 @@ body{
     padding: 5px 10px;
     border-radius: 4px;
     border: 1px solid white;
+    cursor: grab;
 
     background-color: rgba(4, 179, 126, 0.342);
 }
 
 #selectTodo {
-    accent-color: rgb(4, 179, 126)
+    accent-color: rgb(4, 179, 126);
+    cursor: pointer;
 }
 
 .doneItem p {
